--- a/doc/source/reference/protocols/r66.rst
+++ b/doc/source/reference/protocols/r66.rst
@@ -17,6 +17,8 @@ Voici les fonctionnalités qui ont déjà été implémentées dans la *Gateway*
   l'algorithme SHA-256 est supporté pour l'instant)
 - Vérification du hash individuel de chaque bloc.
 - Envoi des :term:`infos de transfert` du client vers le serveur
+- Listing des fichiers (par règle)
+- Requête des méta-données d'un transfert existant
 
 .. warning:: La version 1.2 de TLS est requise au minimum pour effectuer des
    transferts avec R66 avec TLS. Toutes les versions antérieures seront
@@ -24,7 +26,7 @@ Voici les fonctionnalités qui ont déjà été implémentées dans la *Gateway*
 
 Les fonctionnalités R66 suivantes ne sont **pas** implémentées pour l'instant :
 
-- Listing des fichiers (par règle)
+- Listing des règles (par fichier)
 - Export/import de configuration via R66
 - Gestion à distance des limites de bande passante
 - Blocage de nouvelles requêtes entrantes
